install/ocp-admission-webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: runai-validate-elastic
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  labels:
    app: runai
webhooks:
- name: runai-admission-controller.runai.svc.cluster.local
  namespaceSelector:
    matchExpressions:
    - key: runai/queue
      operator: Exists
  failurePolicy: Fail
  clientConfig:
    service:
      name: runai-admission-controller
      namespace: runai
      path: "/validate-not-elastic"
  rules:
  - operations: ["CREATE"]
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: ["statefulsets", "jobs", "runaijobs", "deployments"]
    scope: "Namespaced"
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: runai-validate-fractional
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  labels:
    app: runai
webhooks:
- name: runai-admission-controller.runai.svc.cluster.local
  namespaceSelector:
    matchExpressions:
    - key: runai/queue
      operator: Exists
  failurePolicy: Fail
  clientConfig:
    service:
      name: runai-admission-controller
      namespace: runai
      path: "/validate-fractional"
  rules:
  - operations: ["CREATE"]
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: ["statefulsets", "jobs", "runaijobs", "deployments"]
    scope: "Namespaced"
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: runai-node-affinity
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  labels:
    app: runai
webhooks:
- name: runai-admission-controller.runai.svc.cluster.local
  namespaceSelector:
    matchExpressions:
    - key: runai/queue
      operator: Exists
  failurePolicy: Fail
  clientConfig:
    service:
      name: runai-admission-controller
      namespace: runai
      path: "/node-affinity"
  rules:
  - operations: ["CREATE"]
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: ["statefulsets", "jobs", "runaijobs", "deployments"]
    scope: "Namespaced"
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: runai-label-project
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  labels:
    app: runai
webhooks:
- name: runai-admission-controller.runai.svc.cluster.local
  namespaceSelector:
    matchExpressions:
    - key: runai/queue
      operator: Exists
  failurePolicy: Fail
  clientConfig:
    service:
      name: runai-admission-controller
      namespace: runai
      path: "/label-project"
  rules:
  - operations: ["CREATE"]
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: ["statefulsets", "jobs", "runaijobs", "deployments"]
    scope: "Namespaced"
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: runai-label-user
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  labels:
    app: runai
webhooks:
- name: runai-admission-controller.runai.svc.cluster.local
  namespaceSelector:
    matchExpressions:
    - key: runai/queue
      operator: Exists
  failurePolicy: Fail
  clientConfig:
    service:
      name: runai-admission-controller
      namespace: runai
      path: "/label-user"
  rules:
  - operations: ["CREATE"]
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: ["statefulsets", "jobs", "runaijobs", "deployments"]
    scope: "Namespaced"
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: runai-gpus-pod
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  labels:
    app: runai
webhooks:
- name: runai-admission-controller.runai.svc.cluster.local
  namespaceSelector:
    matchExpressions:
    - key: runai/queue
      operator: Exists
  failurePolicy: Fail
  clientConfig:
    service:
      name: runai-admission-controller
      namespace: runai
      path: "/gpus-pod"
  rules:
  - operations: ["CREATE"]
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: ["pods"]
    scope: "Namespaced"
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: runai-env-variables-pod
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  labels:
    app: runai
webhooks:
- name: runai-admission-controller.runai.svc.cluster.local
  namespaceSelector:
    matchExpressions:
    - key: runai/queue
      operator: Exists
  failurePolicy: Fail
  clientConfig:
    service:
      name: runai-admission-controller
      namespace: runai
      path: "/env-variables-pod"
  rules:
  - operations: ["CREATE"]
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: ["pods"]
    scope: "Namespaced"
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: runai-resource-gpu-factor
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  labels:
    app: runai
webhooks:
- name: runai-admission-controller.runai.svc.cluster.local
  namespaceSelector:
    matchExpressions:
    - key: runai/queue
      operator: Exists
  failurePolicy: Fail
  clientConfig:
    service:
      name: runai-admission-controller
      namespace: runai
      path: "/resource-gpu-factor"
  rules:
  - operations: ["CREATE"]
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: ["statefulsets", "jobs", "runaijobs", "deployments"]
    scope: "Namespaced"
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: runai-config-map-creator
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  labels:
    app: runai
webhooks:
- name: runai-admission-controller.runai.svc.cluster.local
  namespaceSelector:
    matchExpressions:
    - key: runai/queue
      operator: Exists
  failurePolicy: Fail
  clientConfig:
    service:
      name: runai-admission-controller
      namespace: runai
      path: "/config-map-creator"
  rules:
  - operations: ["CREATE"]
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: ["statefulsets", "jobs", "runaijobs", "deployments"]
    scope: "Namespaced"
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: runai-reporter-library
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  labels:
    app: runai
webhooks:
- name: runai-admission-controller.runai.svc.cluster.local
  namespaceSelector:
    matchExpressions:
    - key: runai/queue
      operator: Exists
  failurePolicy: Fail
  clientConfig:
    service:
      name: runai-admission-controller
      namespace: runai
      path: "/reporter-library"
  rules:
  - operations: ["CREATE"]
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: ["statefulsets", "jobs", "runaijobs", "deployments"]
    scope: "Namespaced"
